prevent double borders per https://github.com/orchidjs/tom-select/issues/609#issuecomment-1773078296

--- a/src/scss/tom-select.bootstrap5.scss
+++ b/src/scss/tom-select.bootstrap5.scss
@@ -228,7 +228,8 @@ $select-arrow-offset: calc(#{$select-padding-x} + 5px) !default;
 		--ts-pr-caret: #{$form-select-indicator-padding};
 	}
 
-	&.form-control, .form-select {
+	&.form-control, 
+	&.form-select {
 		.#{$select-ns}-control,
 		&.single.input-active .#{$select-ns}-control {
 			border:		none !important;
